chore: sdk naming
