# selfservice/flow/verification/handler.go
@@ -375,7 +375,7 @@ type submitSelfServiceVerificationFlowBody struct {
 //	  200: selfServiceVerificationFlow
 //	  303: emptyResponse
 //	  400: selfServiceVerificationFlow
-//	  410: selfServiceFlowReplacedError
+//	  410: errorFlowReplaced
 //	  410: selfServiceFlowExpiredError
 //	  500: jsonError
 func (h *Handler) submitFlow(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
